# 2d_square_adaptive

./: .gitignore  CMakeLists.txt  grad_in_gpu.cu  grad_in_gpu.cuh  image.ppm  image_input.pgm  main.cpp  node.h  octree.h  picture_process.h  varray.h  vertex.h
src/: main.cpp  tree.h
